--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ wasmtime-wasi-config = { workspace = true, optional = true }
 wasmtime-wasi-keyvalue = { workspace = true, optional = true }
 wasmtime-wasi-threads = { workspace = true, optional = true }
 wasmtime-wasi-http = { workspace = true, optional = true }
+wasmtime-wasi-dl = { workspace = true, optional = true }
 clap = { workspace = true }
 clap_complete = { workspace = true, optional = true }
 anyhow = { workspace = true, features = ['std'] }
@@ -213,6 +214,7 @@ wasmtime-wasi-nn = { path = "crates/wasi-nn", version = "27.0.0" }
 wasmtime-wasi-config = { path = "crates/wasi-config", version = "27.0.0" }
 wasmtime-wasi-keyvalue = { path = "crates/wasi-keyvalue", version = "27.0.0" }
 wasmtime-wasi-threads = { path = "crates/wasi-threads", version = "27.0.0" }
+wasmtime-wasi-dl = { path = "crates/wasi-dl", version = "27.0.0" }
 wasmtime-component-util = { path = "crates/component-util", version = "=27.0.0" }
 wasmtime-component-macro = { path = "crates/component-macro", version = "=27.0.0" }
 wasmtime-asm-macros = { path = "crates/asm-macros", version = "=27.0.0" }
@@ -345,6 +347,7 @@ criterion = { version = "0.5.0", default-features = false, features = ["html_rep
 rustc-hash = "2.0.0"
 libtest-mimic = "0.7.0"
 semver = { version = "1.0.17", default-features = false }
+libffi-sys = "2.3"
 
 # =============================================================================
 #
